project_demo/22.uac_fft/build/log/idf_py_stdout_output_30967
[1/11] Performing build step for 'bootloader'
[1/1] cd /Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft/build/bootloader/esp-idf/esptool_py && /Users/crisqifawei/.espressif/python_env/idf5.0_py3.9_env/bin/python /Users/crisqifawei/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft/build/bootloader/bootloader.bin
Bootloader binary size 0x5d10 bytes. 0x22f0 bytes (27%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/st7789.c.obj
FAILED: esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/st7789.c.obj 
/Users/crisqifawei/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DLV_CONF_INCLUDE_SIMPLE=1 -DLV_LVGL_H_INCLUDE_SIMPLE -I/Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft/build/config -I/Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft/components/lvgl_esp32_drivers -I/Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft/components/lvgl_esp32_drivers/lvgl_tft -I/Users/crisqifawei/esp/esp-idf/components/newlib/platform_include -I/Users/crisqifawei/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/crisqifawei/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/crisqifawei/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/crisqifawei/esp/esp-idf/components/freertos/esp_additions/include -I/Users/crisqifawei/esp/esp-idf/components/esp_hw_support/include -I/Users/crisqifawei/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/crisqifawei/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/crisqifawei/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/crisqifawei/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/Users/crisqifawei/esp/esp-idf/components/heap/include -I/Users/crisqifawei/esp/esp-idf/components/log/include -I/Users/crisqifawei/esp/esp-idf/components/soc/include -I/Users/crisqifawei/esp/esp-idf/components/soc/esp32s3/. -I/Users/crisqifawei/esp/esp-idf/components/soc/esp32s3/include -I/Users/crisqifawei/esp/esp-idf/components/hal/esp32s3/include -I/Users/crisqifawei/esp/esp-idf/components/hal/include -I/Users/crisqifawei/esp/esp-idf/components/hal/platform_port/include -I/Users/crisqifawei/esp/esp-idf/components/esp_rom/include -I/Users/crisqifawei/esp/esp-idf/components/esp_rom/include/esp32s3 -I/Users/crisqifawei/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/crisqifawei/esp/esp-idf/components/esp_common/include -I/Users/crisqifawei/esp/esp-idf/components/esp_system/include -I/Users/crisqifawei/esp/esp-idf/components/esp_system/port/soc -I/Users/crisqifawei/esp/esp-idf/components/esp_system/port/include/private -I/Users/crisqifawei/esp/esp-idf/components/xtensa/include -I/Users/crisqifawei/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/crisqifawei/esp/esp-idf/components/lwip/include -I/Users/crisqifawei/esp/esp-idf/components/lwip/include/apps -I/Users/crisqifawei/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/crisqifawei/esp/esp-idf/components/lwip/lwip/src/include -I/Users/crisqifawei/esp/esp-idf/components/lwip/port/esp32/include -I/Users/crisqifawei/esp/esp-idf/components/lwip/port/esp32/include/arch -I/Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft/components/lvgl -I/Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft/components/lvgl/lvgl -I/Users/crisqifawei/esp/esp-idf/components/vfs/include -I/Users/crisqifawei/esp/esp-idf/components/sdmmc/include -I/Users/crisqifawei/esp/esp-idf/components/driver/include -I/Users/crisqifawei/esp/esp-idf/components/driver/deprecated -I/Users/crisqifawei/esp/esp-idf/components/driver/esp32s3/include -I/Users/crisqifawei/esp/esp-idf/components/esp_pm/include -I/Users/crisqifawei/esp/esp-idf/components/esp_ringbuf/include -I/Users/crisqifawei/esp/esp-idf/components/fatfs/diskio -I/Users/crisqifawei/esp/esp-idf/components/fatfs/vfs -I/Users/crisqifawei/esp/esp-idf/components/fatfs/src -I/Users/crisqifawei/esp/esp-idf/components/wear_levelling/include -I/Users/crisqifawei/esp/esp-idf/components/esp_partition/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft=. -fmacro-prefix-map=/Users/crisqifawei/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/st7789.c.obj -MF esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/st7789.c.obj.d -o esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/st7789.c.obj -c /Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft/components/lvgl_esp32_drivers/lvgl_tft/st7789.c
/Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft/components/lvgl_esp32_drivers/lvgl_tft/st7789.c: In function 'st7789_init':
/Users/crisqifawei/esp/ESP32S3-SP/22.uac_fft/components/lvgl_esp32_drivers/lvgl_tft/st7789.c:98:5: error: implicit declaration of function 'gpio_pad_select_gpio'; did you mean 'esp_rom_gpio_pad_select_gpio'? [-Werror=implicit-function-declaration]
   98 |     gpio_pad_select_gpio(ST7789_BCKL);
      |     ^~~~~~~~~~~~~~~~~~~~
      |     esp_rom_gpio_pad_select_gpio
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
